2018-06-25  ------ omnetpp-5.4.1 released ------

2018-06-11  ------ omnetpp-5.4 released ------

2018-04-11  ------ omnetpp-5.3 released ------

2018-01-29  Pal Sipos

	* Replace and add new level 2 offline map tiles. Fixes black screen
	with osgEarth 2.5.0.

2018-02-15  Attila Torok

	* Switch from ObjectLocator to GeoTransform. The former was removed
	after osgEarth 2.8, and the latter has been around for quite some
	time now.

2017-12-08  ------ omnetpp-5.2.1 released ------

2017-09-18  ------ omnetpp-5.2 released ------

2017-06-08  Attila Torok

	* Follow OMNeT++ API change: use cOsgCanvas::EarthViewpoint instead of
	osgEarth::Viewpoint.

2017-05-08  ------ omnetpp-5.1.1 released ------

2017-03-31  ------ omnetpp-5.1 released ------

2017-02-06  ------ omnetpp-5.1pre3 released ------

2017-02-06  Attila Torok

	* Add building model source to the offline .earth file.

2017-01-19  Attila Torok

	* Added an offline tile source package, and corresponding omnetpp.ini
	configurations. Levels 16, 17 and 18 are to be added in later to
	release builds from an overlay zip.

2016-12-20  Attila Torok

	* Create the transmission animation procedurally.

	It is no longer loaded from bubble.osgb. That file has been deleted
	because there were many issues loading it, with different versions of
	OSG, especially finding the animation in it. The spheres are now faded
	too, and are animated manually in simulation time rather than "real"
	(wall-clock) time by osgAnimaion.

2016-12-23  ------ omnetpp-5.1pre2 released ------

2016-12-21  Attila Torok

	* Transmission animations are no longer loaded from a file, but created from code instead.

2016-12-21  Rudolf Hornig

	* Added WITH_OSGEARTH to the .cproject file so the IDE will show the osgEarth specific
	  code in enabled state.

2016-08-26  Attila Torok

	* Moved movement trails off the ground to avoid Z-fighting glitches.

2016-04-12  Levente Meszaros
